test/libsolidity/syntaxTests/inlineAssembly/function_without_call.sol
contract C {
  function f() public pure {
    assembly {
      function k() {}

      k
    }
  }
}
// ----
// TypeError: (86-87): Function k used without being called.
